--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,65 @@
-*{
+* {
   margin: 0;
 }
 
-.app{
-display: flex;
-justify-content: space-evenly;
-
-&__left{
- flex:0.9;
+body {
+  background-color: #f5f6fa;
 }
 
-  &__header{
+.app {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #f5f6fa;
+  padding: 20px;
+
+  &__header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    justify-content: space-between;
+    & > h1 {
+      color: #fc3c3c;
+      font-size: 2rem;
+    }
+  }
+
+  &__dropdown {
+    background-color: white;
+  }
+
+  &__left {
+    flex: 0.9;
+  }
+
+  &__header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    justify-content: space-between;
+
+    & > h1 {
+      color: #fc3c3c;
+      font-size: 2rem;
+    }
+  }
+
+  &__stats {
     display: flex;
     justify-content: space-between;
   }
-
-  &__stats{
-    display: flex;
-    justify-content: space-between;
+  &__information > h3 {
+    color: #6a5d5d;
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  &__information > h3:last-of-type {
+    margin-top: 1rem;
   }
 }
 
-@media(max-width:990px) {
-  .app{
+@media (max-width: 990px) {
+  .app {
     flex-direction: column;
   }
 }
